<resources>
    <string name="title_activity_maps">SOS Hà Nội</string>
    <string name="app_name">SOS Hà Nội</string>
    <string name="api_key">AIzaSyARGeTtYQNlFLrKmqoHDapW_ty9HdEnB00</string>
    <string name="hint_email">Số điện thoại</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_name">Tên người dùng</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="btn_register">ĐĂNG KÝ</string>
    <string name="btn_link_to_register">Chưa đăng ký?Đăng ký ngay bây giờ.</string>
    <string name="btn_link_to_login">Đã có tài khoản?Đăng nhập.</string>
    <string name="welcome">Chào Mừng</string>
    <string name="btn_logout">ĐĂNG XUẤT</string>
    <string name="btn_back">Tở về</string>
    <string name="name">Tên Trung tâm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Cài đặt</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Hình ảnh</string>
    <string name="nav_item_location">Vị trí của tôi</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>
    <string name="text_view_paired">Paired Devices</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>
    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>
    <string name="text_pair">Pair</string>

    <string name="second_activity_text">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.
</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="facebook_app_id">1396833670431055</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD1XHK4-Q079dh0UOkKqr3jEOeJVjgviIE</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>
    <string name="dummy_text">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.\n\nLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo."</string>
    <string name="BackDropBottomSheetBehavior">com.ksesoftware.htpig.sosapp.lib.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.ksesoftware.htpig.sosapp.lib.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.ksesoftware.htpig.sosapp.lib.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.ksesoftware.htpig.sosapp.lib.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.ksesoftware.htpig.sosapp.lib.ScrollingAppBarLayoutBehavior</string>
    <string name="loginwith">Login With</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="taikhoanmoi">Tạo tài khoản mới</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="cuuho">Cứu hộ giao thông</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="trovedangnhap">Trở về đăng nhập</string>
    <string name="timkiem">Tìm Kiếm Theo</string>
    <string name="timkiemtatca">Tất cả theo loại</string>
    <string name="timkiemchonloc">Chọn lọc theo hãng</string>
    <string name="luachon">Lựa chọn</string>
    <string name="main_no_items">No items</string>
    <string name="hangxe">Mời bạn chọn hãng xe</string>
    <string name="chonloaixe">Mời bạn chọn loại xe</string>
    <string name="huybo">Hủy Bỏ</string>
    <string name="description_1">Wellcome</string>
    <string name="title_1">Hello</string>

    <string name="label_options">Options:</string>
    <string name="label_option_fullscreen">Enable fullscreen</string>
    <string name="label_option_scrollable">Scrollable slides</string>
    <string name="label_option_custom_fragments">Enable custom fragments</string>
    <string name="label_option_permissions">Enable permission request</string>
    <string name="label_option_show_back">Show back button</string>
    <string name="label_option_show_next">Show next button</string>
    <string name="label_option_skip_enabled">Enable skip button</string>
    <string name="label_option_finish_enabled">Enable finish button</string>
    <string name="label_option_get_started_enabled">Enable \"Get Started\" button</string>
    <string name="label_start_intro">Start intro</string>
    <string name="label_or">or</string>
    <string name="label_demos">Demos: </string>
    <string name="label_start_canteen">\"Canteen\" intro</string>
    <string name="label_start_splash">Splash screen</string>

    <string name="title_material_metaphor">Material is the metaphor</string>
    <string name="title_material_bold">Bold, graphic, intentional</string>
    <string name="title_material_motion">Motion provides meaning</string>
    <string name="title_material_shadow">Light and shadow</string>

    <string name="description_material_metaphor">A material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic.</string>
    <string name="description_material_bold">The foundational elements of print-based design – typography, grids, space, scale, color, and use of imagery – guide visual treatments.</string>
    <string name="description_material_motion">Motion respects and reinforces the user as the prime mover. Primary user actions are inflection points that initiate motion, transforming the whole design.</string>
    <string name="description_material_shadow">Within the material environment, virtual lights illuminate the scene. Key lights create directional shadows, while ambient light creates soft shadows from all angles.</string>

    <string name="title_permissions">Requesting permissions was never easier.</string>
    <string name="description_permissions">This app needs the camera and storage permission.\nIt\'s only to show how permission requests work in this library and we won\'t do anything with the granted permissions.</string>
    <string name="label_grant_permissions">Please grant the permissions before proceeding.</string>

    <string name="label_button_cta">Click me!</string>
    <string name="toast_button_cta">Hey, that\'s how custom CTA buttons work in material-intro!</string>

    <string name="title_fragment_login">This is a custom fragment.</string>
    <string name="hint_fake_username">Fake username</string>
    <string name="hint_fake_password">Fake password</string>
    <string name="label_fake_login">Fake login</string>
    <string name="label_fake_login_loading">Loading…</string>
    <string name="label_fake_login_success">Logged in ☺</string>
    <string name="label_fake_login_success_message">Successfully faked login.</string>
    <string name="label_fill_out_form">Please fill out the form before proceeding.</string>

    <string name="title_fragment_custom">Take off!</string>

    <string name="label_activity_finish">Nothing here…\n…just a demo how to create a splash screen intro.</string>

    <string name="title_canteen_intro1" translatable="false">Menus right on your screen</string>
    <string name="title_canteen_intro2" translatable="false">Cash on delivery</string>
    <string name="title_canteen_intro3" translatable="false">Choose what you like</string>
    <string name="description_canteen_intro1" translatable="false">Looking for something to eat? Just browse the feed wherever you are.</string>
    <string name="description_canteen_intro2" translatable="false">Order and we\'ll deliver the menu right in front of your door.</string>
    <string name="description_canteen_intro3" translatable="false">Bookmark a menu you wanted to save and keep track of its status whether it\'s available or not.</string>
    <string name="label_button_cta_canteen_intro" translatable="false">Get started</string>

</resources>
