<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:background="#fb3d3d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/timkiem"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioTatCa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/timkiemtatca" />

        <RadioButton
            android:id="@+id/radioChonLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timkiemchonloc" />
    </RadioGroup>
    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fb3d3d"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textColor="#fb3d3d"
            android:id="@+id/btnChon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_line_red_vien"
            android:text="@string/luachon" />
        <Button
            android:textColor="#ffffff"
            android:id="@+id/btnHuyBo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_line_red"
            android:text="@string/huybo" />
    </LinearLayout>
</LinearLayout>