<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/ic_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:context=".activity.MapsActivity"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp">

        <TextView
            android:textColor="#000000"
            android:id="@+id/txtOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Lựa chọn loại xe đang sử dụng"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerLoaiXe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/lilLyaout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:textColor="#000000"
                android:id="@+id/txtTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoLink="web"
                android:text="Lựa chọn hãng xe đang sử dụng"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerChiTietXe"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/timkiem"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioTatCa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/timkiemtatca" />

                <RadioButton
                    android:id="@+id/radioChonLoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timkiemchonloc" />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:padding="8dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <Button
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/ic_line_button"
                android:text="Xác nhận"
                android:id="@+id/btnXacNhan"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
